--- a/index.html
+++ b/index.html
@@ -85,6 +85,40 @@
       bottom: 100%;
       border-bottom-color: #1e293b;
     }
+    /* === UI Redesign: Login + Sidebar === */
+    @keyframes loginEnter {
+      from { opacity: 0; transform: translateY(24px) scale(0.97); }
+      to   { opacity: 1; transform: translateY(0)    scale(1);    }
+    }
+    .login-card-animate { animation: loginEnter 0.55s cubic-bezier(0.34, 1.15, 0.64, 1) both; }
+    @keyframes floatGlow {
+      0%, 100% { transform: translateY(0px)   scale(1);    opacity: 0.13; }
+      50%       { transform: translateY(-30px) scale(1.07); opacity: 0.21; }
+    }
+    .login-orb-1 { animation: floatGlow  9s ease-in-out infinite; }
+    .login-orb-2 { animation: floatGlow 13s ease-in-out infinite 2.5s reverse; }
+    /* Dark sidebar nav buttons */
+    .sidebar-nav-btn {
+      color: rgba(255,255,255,0.48);
+      transition: color 0.18s ease, background-color 0.18s ease, box-shadow 0.18s ease;
+    }
+    .sidebar-nav-btn:hover:not(.sidebar-active) {
+      color: rgba(255,255,255,0.82);
+      background-color: rgba(255,255,255,0.07);
+    }
+    .sidebar-nav-btn.sidebar-active {
+      color: #ffffff;
+      background-color: rgba(0,102,204,0.72);
+      box-shadow: 0 2px 12px rgba(0,102,204,0.38);
+    }
+    .sidebar-logout-btn {
+      color: rgba(255,255,255,0.35);
+      transition: color 0.18s ease, background-color 0.18s ease;
+    }
+    .sidebar-logout-btn:hover {
+      color: #fc8181;
+      background-color: rgba(239,68,68,0.11);
+    }
   </style>
 </head>
 <body>
@@ -1988,34 +2022,80 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
       };
 
       return (
-        <div className="min-h-screen bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 flex items-center justify-center p-4">
-          <div className="bg-white rounded-2xl shadow-2xl w-full max-w-md p-8">
-            <div className="text-center mb-8">
-              <img src="/apple-touch-icon.png" alt="CAT Onboard" className="w-16 h-16 rounded-2xl mx-auto mb-4 shadow-lg object-cover" />
-              <h1 className="text-2xl font-bold text-gray-800">CAT Onboard</h1>
-              <p className="text-gray-500 mt-2">Sign in to get started</p>
+        <div className="min-h-screen flex items-center justify-center p-4 relative overflow-hidden" style={{background: 'linear-gradient(145deg, #05101f 0%, #091d3e 50%, #07111f 100%)'}}>
+          {/* Ambient glow orbs */}
+          <div className="login-orb-1 pointer-events-none absolute" style={{width: 560, height: 560, borderRadius: '50%', background: 'radial-gradient(circle, rgba(0,102,204,0.9) 0%, transparent 70%)', top: '-10%', left: '-12%'}} />
+          <div className="login-orb-2 pointer-events-none absolute" style={{width: 420, height: 420, borderRadius: '50%', background: 'radial-gradient(circle, rgba(0,148,255,0.85) 0%, transparent 70%)', bottom: '-5%', right: '-8%'}} />
+
+          {/* Card */}
+          <div className="login-card-animate relative z-10 bg-white w-full max-w-md" style={{borderRadius: '22px', boxShadow: '0 32px 90px rgba(0,0,0,0.55), 0 0 0 1px rgba(255,255,255,0.05)', padding: '38px 38px 30px'}}>
+
+            {/* Company logo */}
+            <div className="flex justify-center mb-5">
+              <img src="/company_logo.png" alt="Copenhagen Air Taxi" style={{height: 42, width: 'auto', maxWidth: '85%', objectFit: 'contain'}} />
             </div>
 
-            <form onSubmit={handleSubmit} className="space-y-5">
+            {/* Fade divider */}
+            <div style={{height: 1, background: 'linear-gradient(90deg, transparent, #e2e8f0 25%, #e2e8f0 75%, transparent)', marginBottom: 26}} />
+
+            <h1 className="text-center font-bold text-gray-800 mb-1" style={{fontSize: '1.05rem', letterSpacing: '-0.015em'}}>CAT Onboard</h1>
+            <p className="text-center text-gray-400 text-sm mb-7">Sign in to continue</p>
+
+            <form onSubmit={handleSubmit} className="space-y-4">
               <div>
-                <label className="block text-sm font-medium text-gray-700 mb-2">Email</label>
-                <input type="email" value={email} onChange={(e) => setEmail(e.target.value)} className="w-full px-4 py-3 border border-gray-300 rounded-xl focus:ring-2 focus:ring-blue-500 focus:border-transparent outline-none" placeholder="Enter your email" disabled={isLoading} required />
+                <label className="block text-gray-500 mb-1.5" style={{fontSize: '0.7rem', fontWeight: 700, letterSpacing: '0.07em', textTransform: 'uppercase'}}>Email</label>
+                <input
+                  type="email" value={email} onChange={(e) => setEmail(e.target.value)}
+                  className="w-full px-4 py-3 border rounded-xl text-gray-800 text-sm placeholder-gray-300 outline-none"
+                  style={{borderColor: '#e2e8f0', transition: 'border-color 0.2s ease, box-shadow 0.2s ease'}}
+                  onFocus={e => { e.target.style.borderColor = '#0066CC'; e.target.style.boxShadow = '0 0 0 3px rgba(0,102,204,0.12)'; }}
+                  onBlur={e => { e.target.style.borderColor = '#e2e8f0'; e.target.style.boxShadow = 'none'; }}
+                  placeholder="you@aircat.dk" disabled={isLoading} required />
               </div>
               <div>
-                <label className="block text-sm font-medium text-gray-700 mb-2">Password</label>
-                <input type="password" value={password} onChange={(e) => setPassword(e.target.value)} className="w-full px-4 py-3 border border-gray-300 rounded-xl focus:ring-2 focus:ring-blue-500 focus:border-transparent outline-none" placeholder="Enter password" disabled={isLoading} required />
+                <label className="block text-gray-500 mb-1.5" style={{fontSize: '0.7rem', fontWeight: 700, letterSpacing: '0.07em', textTransform: 'uppercase'}}>Password</label>
+                <input
+                  type="password" value={password} onChange={(e) => setPassword(e.target.value)}
+                  className="w-full px-4 py-3 border rounded-xl text-gray-800 text-sm placeholder-gray-300 outline-none"
+                  style={{borderColor: '#e2e8f0', transition: 'border-color 0.2s ease, box-shadow 0.2s ease'}}
+                  onFocus={e => { e.target.style.borderColor = '#0066CC'; e.target.style.boxShadow = '0 0 0 3px rgba(0,102,204,0.12)'; }}
+                  onBlur={e => { e.target.style.borderColor = '#e2e8f0'; e.target.style.boxShadow = 'none'; }}
+                  placeholder="••••••••" disabled={isLoading} required />
               </div>
               {error && (
                 <div className="bg-red-50 text-red-600 px-4 py-3 rounded-xl text-sm flex items-center gap-2">
-                  <svg className="w-5 h-5 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                  <svg className="w-4 h-4 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                   {error}
                 </div>
               )}
-              <button type="submit" disabled={isLoading} className="w-full bg-gradient-to-r from-blue-500 to-blue-600 text-white py-3 rounded-xl font-semibold hover:from-blue-600 hover:to-blue-700 transition-all shadow-lg disabled:opacity-50">
-                {isLoading ? 'Signing in...' : 'Sign In'}
+              <button
+                type="submit" disabled={isLoading}
+                className="w-full text-white py-3 rounded-xl font-semibold text-sm disabled:opacity-60"
+                style={{marginTop: 8, background: 'linear-gradient(135deg, #0066CC 0%, #0050a0 100%)', boxShadow: '0 4px 16px rgba(0,102,204,0.4)', transition: 'transform 0.15s ease, box-shadow 0.2s ease'}}
+                onMouseEnter={e => { if (!isLoading) { e.currentTarget.style.boxShadow = '0 7px 24px rgba(0,102,204,0.55)'; e.currentTarget.style.transform = 'translateY(-1px)'; }}}
+                onMouseLeave={e => { e.currentTarget.style.boxShadow = '0 4px 16px rgba(0,102,204,0.4)'; e.currentTarget.style.transform = 'translateY(0)'; }}
+                onMouseDown={e => { e.currentTarget.style.transform = 'translateY(0px)'; e.currentTarget.style.boxShadow = '0 2px 8px rgba(0,102,204,0.35)'; }}
+              >
+                {isLoading ? (
+                  <span className="flex items-center justify-center gap-2">
+                    <svg className="animate-spin w-4 h-4" fill="none" viewBox="0 0 24 24">
+                      <circle className="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" strokeWidth="4"/>
+                      <path className="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4z"/>
+                    </svg>
+                    Signing in…
+                  </span>
+                ) : 'Sign In'}
               </button>
             </form>
-            <p className="text-center text-gray-400 text-sm mt-6">Need access? Contact <a href="mailto:sep@aircat.dk" className="text-blue-500 hover:text-blue-600">sep@aircat.dk</a></p>
+
+            <p className="text-center text-xs mt-6" style={{color: 'rgba(0,0,0,0.28)'}}>
+              Need access?{' '}
+              <a href="mailto:sep@aircat.dk" style={{color: '#0066CC', fontWeight: 500, transition: 'color 0.15s'}}
+                onMouseEnter={e => e.currentTarget.style.color = '#0050a0'}
+                onMouseLeave={e => e.currentTarget.style.color = '#0066CC'}>
+                sep@aircat.dk
+              </a>
+            </p>
           </div>
         </div>
       );
@@ -2108,35 +2188,30 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
       };
 
       return (
-        <div className="h-screen flex bg-gray-100">
+        <div className="h-screen flex" style={{background: '#eef2f7'}}>
           {/* Sidebar */}
-          <aside className="w-60 bg-white border-r border-gray-200 flex flex-col flex-shrink-0">
-            {/* Logo / Brand */}
-            <div className="px-5 py-5 border-b border-gray-100">
-              <div className="flex items-center gap-3">
-                <img src="/apple-touch-icon.png" alt="CAT Onboard" className="w-9 h-9 rounded-lg shadow-sm object-cover" />
-                <div>
-                  <div className="font-semibold text-gray-800 text-sm">CAT Onboard</div>
-                  <div className="text-xs text-gray-400">Copenhagen AirTaxi A/S</div>
-                </div>
-              </div>
+          <aside className="w-60 flex flex-col flex-shrink-0" style={{background: '#0c1d3d'}}>
+            {/* Top brand accent line */}
+            <div style={{height: 3, flexShrink: 0, background: 'linear-gradient(90deg, #0066CC 0%, #33aaff 100%)'}} />
+
+            {/* Company Logo */}
+            <div className="px-5 pt-5 pb-3">
+              <img src="/company_logo.png" alt="Copenhagen Air Taxi" style={{height: 30, width: 'auto', maxWidth: '100%', objectFit: 'contain', filter: 'brightness(0) invert(1)', opacity: 0.9}} />
+              <div style={{marginTop: 12, height: 1, background: 'rgba(255,255,255,0.07)'}} />
+              <div style={{marginTop: 7, fontSize: '0.6rem', fontWeight: 700, letterSpacing: '0.1em', textTransform: 'uppercase', color: 'rgba(255,255,255,0.25)'}}>Onboard Portal</div>
             </div>
 
             {/* Navigation Items */}
-            <nav className="flex-1 px-3 py-4 space-y-1">
+            <nav className="flex-1 px-3 py-2 space-y-0.5">
               {NAV_ITEMS.map((item) => {
                 const isActive = currentPage === item.id;
                 return (
                   <button
                     key={item.id}
                     onClick={() => handleNavigate(item.id)}
-                    className={`w-full flex items-center gap-3 px-3 py-2.5 rounded-lg text-sm font-medium transition-colors ${
-                      isActive
-                        ? 'bg-blue-50 text-blue-600'
-                        : 'text-gray-600 hover:bg-gray-50 hover:text-gray-900'
-                    }`}
+                    className={`sidebar-nav-btn w-full flex items-center gap-3 px-3 py-2.5 rounded-lg text-sm font-medium${isActive ? ' sidebar-active' : ''}`}
                   >
-                    <NavIcon name={item.icon} className={`w-5 h-5 ${isActive ? 'text-blue-500' : 'text-gray-400'}`} />
+                    <NavIcon name={item.icon} className="w-5 h-5 flex-shrink-0" />
                     {item.label}
                   </button>
                 );
@@ -2144,28 +2219,24 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
             </nav>
 
             {/* Bottom Section: Admin + User + Logout */}
-            <div className="px-3 py-3 border-t border-gray-100 space-y-1">
+            <div className="px-3 py-3 space-y-0.5" style={{borderTop: '1px solid rgba(255,255,255,0.07)'}}>
               <button
                 onClick={() => handleNavigate('admin')}
-                className={`w-full flex items-center gap-3 px-3 py-2.5 rounded-lg text-sm font-medium transition-colors ${
-                  currentPage === 'admin'
-                    ? 'bg-blue-50 text-blue-600'
-                    : 'text-gray-600 hover:bg-gray-50 hover:text-gray-900'
-                }`}
+                className={`sidebar-nav-btn w-full flex items-center gap-3 px-3 py-2.5 rounded-lg text-sm font-medium${currentPage === 'admin' ? ' sidebar-active' : ''}`}
               >
-                <NavIcon name="admin" className={`w-5 h-5 ${currentPage === 'admin' ? 'text-blue-500' : 'text-gray-400'}`} />
+                <NavIcon name="admin" className="w-5 h-5 flex-shrink-0" />
                 Admin
               </button>
               {currentUser && (
-                <div className="px-3 py-2 text-xs text-gray-400 truncate" title={currentUser.email}>
+                <div className="px-3 py-2 text-xs truncate" style={{color: 'rgba(255,255,255,0.28)'}} title={currentUser.email}>
                   {currentUser.email}
                 </div>
               )}
               <button
                 onClick={onLogout}
-                className="w-full flex items-center gap-3 px-3 py-2.5 rounded-lg text-sm font-medium text-gray-600 hover:bg-red-50 hover:text-red-600 transition-colors"
+                className="sidebar-logout-btn w-full flex items-center gap-3 px-3 py-2.5 rounded-lg text-sm font-medium"
               >
-                <NavIcon name="logout" className="w-5 h-5 text-gray-400" />
+                <NavIcon name="logout" className="w-5 h-5 flex-shrink-0" />
                 Logout
               </button>
             </div>
