--- a/index.html
+++ b/index.html
@@ -97,27 +97,27 @@
     }
     .login-orb-1 { animation: floatGlow  9s ease-in-out infinite; }
     .login-orb-2 { animation: floatGlow 13s ease-in-out infinite 2.5s reverse; }
-    /* Dark sidebar nav buttons */
+    /* Light sidebar nav buttons */
     .sidebar-nav-btn {
-      color: rgba(255,255,255,0.48);
+      color: rgba(20,50,95,0.55);
       transition: color 0.18s ease, background-color 0.18s ease, box-shadow 0.18s ease;
     }
     .sidebar-nav-btn:hover:not(.sidebar-active) {
-      color: rgba(255,255,255,0.82);
-      background-color: rgba(255,255,255,0.07);
+      color: rgba(20,50,95,0.88);
+      background-color: rgba(0,102,204,0.08);
     }
     .sidebar-nav-btn.sidebar-active {
       color: #ffffff;
-      background-color: rgba(0,102,204,0.72);
-      box-shadow: 0 2px 12px rgba(0,102,204,0.38);
+      background-color: #0066CC;
+      box-shadow: 0 2px 14px rgba(0,102,204,0.32);
     }
     .sidebar-logout-btn {
-      color: rgba(255,255,255,0.35);
+      color: rgba(20,50,95,0.42);
       transition: color 0.18s ease, background-color 0.18s ease;
     }
     .sidebar-logout-btn:hover {
-      color: #fc8181;
-      background-color: rgba(239,68,68,0.11);
+      color: #dc2626;
+      background-color: rgba(220,38,38,0.07);
     }
   </style>
 </head>
@@ -2190,15 +2190,15 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
       return (
         <div className="h-screen flex" style={{background: '#eef2f7'}}>
           {/* Sidebar */}
-          <aside className="w-60 flex flex-col flex-shrink-0" style={{background: '#0c1d3d'}}>
+          <aside className="w-60 flex flex-col flex-shrink-0" style={{background: '#e8f0fc', borderRight: '1px solid rgba(0,102,204,0.12)'}}>
             {/* Top brand accent line */}
             <div style={{height: 3, flexShrink: 0, background: 'linear-gradient(90deg, #0066CC 0%, #33aaff 100%)'}} />
 
             {/* Company Logo */}
-            <div className="px-5 pt-5 pb-3">
-              <img src="/company_logo.png" alt="Copenhagen Air Taxi" style={{height: 30, width: 'auto', maxWidth: '100%', objectFit: 'contain', filter: 'brightness(0) invert(1)', opacity: 0.9}} />
-              <div style={{marginTop: 12, height: 1, background: 'rgba(255,255,255,0.07)'}} />
-              <div style={{marginTop: 7, fontSize: '0.6rem', fontWeight: 700, letterSpacing: '0.1em', textTransform: 'uppercase', color: 'rgba(255,255,255,0.25)'}}>Onboard Portal</div>
+            <div className="px-5 pt-5 pb-3" style={{textAlign: 'center'}}>
+              <img src="/company_logo.png" alt="Copenhagen Air Taxi" style={{height: 30, display: 'inline-block', maxWidth: '100%', objectFit: 'contain'}} />
+              <div style={{marginTop: 12, height: 1, background: 'rgba(0,102,204,0.1)'}} />
+              <div style={{marginTop: 7, fontSize: '0.6rem', fontWeight: 700, letterSpacing: '0.1em', textTransform: 'uppercase', color: 'rgba(0,102,204,0.45)'}}>Onboard Portal</div>
             </div>
 
             {/* Navigation Items */}
@@ -2219,7 +2219,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
             </nav>
 
             {/* Bottom Section: Admin + User + Logout */}
-            <div className="px-3 py-3 space-y-0.5" style={{borderTop: '1px solid rgba(255,255,255,0.07)'}}>
+            <div className="px-3 py-3 space-y-0.5" style={{borderTop: '1px solid rgba(0,102,204,0.1)'}}>
               <button
                 onClick={() => handleNavigate('admin')}
                 className={`sidebar-nav-btn w-full flex items-center gap-3 px-3 py-2.5 rounded-lg text-sm font-medium${currentPage === 'admin' ? ' sidebar-active' : ''}`}
@@ -2228,7 +2228,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
                 Admin
               </button>
               {currentUser && (
-                <div className="px-3 py-2 text-xs truncate" style={{color: 'rgba(255,255,255,0.28)'}} title={currentUser.email}>
+                <div className="px-3 py-2 text-xs truncate" style={{color: 'rgba(20,50,95,0.42)'}} title={currentUser.email}>
                   {currentUser.email}
                 </div>
               )}
