--- a/index.html
+++ b/index.html
@@ -2032,7 +2032,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
 
             {/* Company logo */}
             <div className="flex justify-center mb-5">
-              <img src="/company_logo.png" alt="Copenhagen Air Taxi" style={{height: 42, width: 'auto', maxWidth: '85%', objectFit: 'contain'}} />
+              <img src="/company_logo_blu.png" alt="Copenhagen Air Taxi" style={{height: 70, width: 'auto', maxWidth: '85%', objectFit: 'contain'}} />
             </div>
 
             {/* Fade divider */}
