--- a/index.html
+++ b/index.html
@@ -2407,7 +2407,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
               <button
                 onClick={() => startGuide()}
                 disabled={isLoading}
-                className="mt-3 inline-flex items-center gap-2 px-4 py-2 bg-emerald-500 hover:bg-emerald-600 disabled:bg-gray-300 text-white text-sm font-medium rounded-lg transition-colors"
+                className="mt-3 inline-flex items-center gap-2 px-4 py-2 bg-blue-600 hover:bg-blue-700 disabled:bg-gray-300 text-white text-sm font-medium rounded-lg transition-colors"
               >
                 Guide me step-by-step
                 <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M13 7l5 5m0 0l-5 5m5-5H6" /></svg>
@@ -2444,7 +2444,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
                 {guide && !guide.completed && (
                   <button
                     onClick={() => setViewMode('wizard')}
-                    className="flex items-center gap-2 px-3.5 py-2 bg-emerald-50 hover:bg-emerald-100 text-emerald-700 text-sm font-medium rounded-lg transition-colors border border-emerald-200"
+                    className="flex items-center gap-2 px-3.5 py-2 bg-blue-50 hover:bg-blue-100 text-blue-700 text-sm font-medium rounded-lg transition-colors border border-blue-200"
                   >
                     <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 5l7 7-7 7" /></svg>
                     Return to guide (step {guide.currentIndex + 1}/{guide.steps.length})
@@ -2534,15 +2534,15 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
       return (
         <div className="h-full flex flex-col bg-gray-50">
           {/* Wizard Header */}
-          <div className="flex-shrink-0 bg-emerald-600 text-white px-6 py-4">
+          <div className="flex-shrink-0 text-white px-6 py-4" style={{background: '#0c1d3d'}}>
             <div className="max-w-3xl mx-auto flex items-center justify-between">
               <div>
                 <h1 className="font-semibold text-base">{title}</h1>
-                <p className="text-emerald-200 text-xs mt-0.5">
+                <p className="text-xs mt-0.5" style={{color: 'rgba(255,255,255,0.55)'}}>
                   {completed ? `All ${steps.length} steps completed` : `Step ${currentIndex + 1} of ${steps.length}`}
                 </p>
               </div>
-              <button onClick={onExit} className="flex items-center gap-1.5 px-3 py-1.5 text-xs font-medium text-emerald-100 hover:text-white hover:bg-emerald-700 rounded-lg transition-colors">
+              <button onClick={onExit} className="flex items-center gap-1.5 px-3 py-1.5 text-xs font-medium rounded-lg transition-colors hover:bg-white/10" style={{color: 'rgba(255,255,255,0.7)'}}>
                 <CloseIcon className="w-4 h-4" />
                 Exit guide
               </button>
@@ -2550,13 +2550,13 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
           </div>
 
           {/* Progress Bar */}
-          <div className="flex-shrink-0 bg-emerald-50 px-6 py-3 border-b border-emerald-100">
+          <div className="flex-shrink-0 bg-gray-50 px-6 py-3 border-b border-gray-200">
             <div className="max-w-3xl mx-auto flex gap-1.5">
               {steps.map((_, i) => (
                 <div key={i} className={`h-2 flex-1 rounded-full transition-all duration-300 ${
-                  completed ? 'bg-emerald-500'
-                    : i < currentIndex ? 'bg-emerald-500'
-                    : i === currentIndex ? 'bg-emerald-400'
+                  completed ? 'bg-blue-600'
+                    : i < currentIndex ? 'bg-blue-600'
+                    : i === currentIndex ? 'bg-blue-400'
                     : 'bg-gray-200'
                 }`} />
               ))}
@@ -2572,7 +2572,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
                 <div className="mb-5">
                   <div className="flex flex-wrap gap-2">
                     {steps.slice(0, currentIndex).map((step, i) => (
-                      <span key={i} className="inline-flex items-center gap-1.5 text-xs text-emerald-700 bg-emerald-50 px-2.5 py-1 rounded-full">
+                      <span key={i} className="inline-flex items-center gap-1.5 text-xs text-blue-700 bg-blue-50 px-2.5 py-1 rounded-full">
                         <svg className="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M5 13l4 4L19 7" /></svg>
                         {step.title}
                       </span>
@@ -2585,7 +2585,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
               {currentStep && !completed && (
                 <div className="bg-white rounded-2xl border border-gray-200 shadow-sm fade-in" key={currentIndex}>
                   <div className="px-8 py-6">
-                    <span className="inline-block text-xs font-bold text-emerald-600 bg-emerald-50 px-2.5 py-1 rounded-full mb-3">Step {currentIndex + 1}</span>
+                    <span className="inline-block text-xs font-bold text-blue-600 bg-blue-50 px-2.5 py-1 rounded-full mb-3">Step {currentIndex + 1}</span>
                     <h2 className="text-xl font-bold text-gray-900 mb-4">{currentStep.title}</h2>
                     <div className="prose text-sm text-gray-700" dangerouslySetInnerHTML={{ __html: renderMarkdown(currentStep.content) }} />
 
@@ -2617,7 +2617,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
                       )}
                       <button
                         onClick={onNext}
-                        className="px-6 py-2.5 bg-emerald-500 hover:bg-emerald-600 text-white text-sm font-medium rounded-lg transition-colors flex items-center gap-2"
+                        className="px-6 py-2.5 bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium rounded-lg transition-colors flex items-center gap-2"
                       >
                         {isLastStep ? 'Complete' : 'Done, next step'}
                         <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M13 7l5 5m0 0l-5 5m5-5H6" /></svg>
@@ -2631,8 +2631,8 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
               {completed && (
                 <div className="bg-white rounded-2xl border border-gray-200 shadow-sm fade-in">
                   <div className="px-8 py-10 text-center">
-                    <div className="w-16 h-16 bg-emerald-100 rounded-full flex items-center justify-center mx-auto mb-4">
-                      <svg className="w-8 h-8 text-emerald-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                    <div className="w-16 h-16 bg-blue-100 rounded-full flex items-center justify-center mx-auto mb-4">
+                      <svg className="w-8 h-8 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                     </div>
                     <h2 className="text-xl font-bold text-gray-900 mb-1">All done!</h2>
                     <p className="text-sm text-gray-500 mb-6">You've completed all {steps.length} steps.</p>
@@ -2640,7 +2640,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
                     <div className="text-left max-w-md mx-auto space-y-2 mb-8">
                       {steps.map((step, i) => (
                         <div key={i} className="flex items-center gap-2.5 text-sm">
-                          <div className="w-5 h-5 bg-emerald-100 text-emerald-600 rounded-full flex items-center justify-center flex-shrink-0">
+                          <div className="w-5 h-5 bg-blue-100 text-blue-600 rounded-full flex items-center justify-center flex-shrink-0">
                             <svg className="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M5 13l4 4L19 7" /></svg>
                           </div>
                           <span className="text-gray-600">{step.title}</span>
@@ -2648,7 +2648,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
                       ))}
                     </div>
 
-                    <button onClick={onExit} className="px-6 py-2.5 bg-emerald-500 hover:bg-emerald-600 text-white text-sm font-medium rounded-lg transition-colors">
+                    <button onClick={onExit} className="px-6 py-2.5 bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium rounded-lg transition-colors">
                       Done
                     </button>
                   </div>
