--- a/index.html
+++ b/index.html
@@ -2534,7 +2534,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
       return (
         <div className="h-full flex flex-col bg-gray-50">
           {/* Wizard Header */}
-          <div className="flex-shrink-0 text-white px-6 py-4" style={{background: '#0c1d3d'}}>
+          <div className="flex-shrink-0 text-white px-6 py-4" style={{background: '#1a3a6b', boxShadow: 'inset 6px 0 12px -4px rgba(0,0,0,0.45), 0 2px 6px rgba(0,0,0,0.18)'}}>
             <div className="max-w-3xl mx-auto flex items-center justify-between">
               <div>
                 <h1 className="font-semibold text-base">{title}</h1>
