--- a/index.html
+++ b/index.html
@@ -286,6 +286,41 @@
       async savePartLocation(data) { return this.add('partLocations', data); },
       async updatePartLocation(id, data) { return this.update('partLocations', id, data); },
       async deletePartLocation(id) { return this.remove('partLocations', id); },
+
+      // -- Users --
+      async upsertUser(uid, email) {
+        this._ensureDb();
+        const ADMIN_EMAIL = 'sep@aircat.dk';
+        const ref = db.collection('users').doc(uid);
+        const snap = await ref.get();
+        if (!snap.exists) {
+          await ref.set({
+            email,
+            role: email === ADMIN_EMAIL ? 'admin' : 'user',
+            createdAt: firebase.firestore.FieldValue.serverTimestamp(),
+            lastLogin: firebase.firestore.FieldValue.serverTimestamp(),
+          });
+        } else {
+          await ref.update({ lastLogin: firebase.firestore.FieldValue.serverTimestamp() });
+        }
+        const updated = await ref.get();
+        const data = updated.data();
+        return { id: uid, ...data };
+      },
+
+      async getUsers() {
+        this._ensureDb();
+        const snapshot = await db.collection('users').orderBy('email').get();
+        return snapshot.docs.map(doc => {
+          const data = doc.data();
+          return {
+            id: doc.id,
+            ...data,
+            lastLogin: data.lastLogin?.toDate ? data.lastLogin.toDate().toISOString() : null,
+            createdAt: data.createdAt?.toDate ? data.createdAt.toDate().toISOString() : null,
+          };
+        });
+      },
     };
 
     // ============================================================
@@ -1677,11 +1712,23 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
       const [partLocations, setPartLocations] = useState([]);
       const [isLoading, setIsLoading] = useState(true);
       const [dataError, setDataError] = useState(null);
+      const [isAdmin, setIsAdmin] = useState(false);
 
       // Firebase Auth listener
       useEffect(() => {
         if (!auth) { setAuthLoading(false); return; }
-        const unsubscribe = auth.onAuthStateChanged((user) => {
+        const unsubscribe = auth.onAuthStateChanged(async (user) => {
+          if (user && db) {
+            try {
+              const userDoc = await FirestoreService.upsertUser(user.uid, user.email);
+              setIsAdmin(userDoc.role === 'admin');
+            } catch (e) {
+              console.warn('Could not load user role:', e);
+              setIsAdmin(false);
+            }
+          } else {
+            setIsAdmin(false);
+          }
           setCurrentUser(user);
           setAuthLoading(false);
         });
@@ -1954,6 +2001,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
       return (
         <AppShell
           currentUser={currentUser}
+          isAdmin={isAdmin}
           sops={sops}
           categories={categories}
           glossary={glossary}
@@ -2106,7 +2154,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
     // ============================================================
 
     function AppShell(props) {
-      const { currentUser, sops, categories, glossary, contacts, dailyTasks, knowledgeBase, pricing, partLocations,
+      const { currentUser, isAdmin, sops, categories, glossary, contacts, dailyTasks, knowledgeBase, pricing, partLocations,
         dataError, onDismissError,
         onSopCreate, onSopUpdate, onSopDelete,
         onTermCreate, onTermUpdate, onTermDelete,
@@ -2149,6 +2197,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
           case 'pricing':
             return <PricingPage pricing={pricing} />;
           case 'admin':
+            if (!isAdmin) return <AskCATPage sops={sops} glossary={glossary} contacts={contacts} dailyTasks={dailyTasks} knowledgeBase={knowledgeBase} />;
             return (
               <AdminPage
                 sops={sops}
@@ -2221,15 +2270,17 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
             {/* Bottom Section: Admin + User/Logout */}
             <div className="px-3 pb-3 pt-2 space-y-2" style={{borderTop: '1px solid rgba(255,255,255,0.07)'}}>
 
-              {/* Admin — outlined to feel system-level, not content nav */}
-              <button
-                onClick={() => handleNavigate('admin')}
-                className={`sidebar-nav-btn w-full flex items-center gap-3 px-3 py-2 rounded-lg text-sm font-medium${currentPage === 'admin' ? ' sidebar-active' : ''}`}
-                style={currentPage !== 'admin' ? {border: '1px solid rgba(255,255,255,0.13)'} : {}}
-              >
-                <NavIcon name="admin" className="w-4 h-4 flex-shrink-0" />
-                Admin Panel
-              </button>
+              {/* Admin — only visible to admins */}
+              {isAdmin && (
+                <button
+                  onClick={() => handleNavigate('admin')}
+                  className={`sidebar-nav-btn w-full flex items-center gap-3 px-3 py-2 rounded-lg text-sm font-medium${currentPage === 'admin' ? ' sidebar-active' : ''}`}
+                  style={currentPage !== 'admin' ? {border: '1px solid rgba(255,255,255,0.13)'} : {}}
+                >
+                  <NavIcon name="admin" className="w-4 h-4 flex-shrink-0" />
+                  Admin Panel
+                </button>
+              )}
 
               {/* User identity + logout — unified strip */}
               {currentUser && (
@@ -3703,6 +3754,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
       { id: 'contacts', label: 'Contacts' },
       { id: 'pricing', label: 'Pricing' },
       { id: 'partLocations', label: 'Part Locations' },
+      { id: 'users', label: 'Users' },
     ];
 
     function AdminPage(props) {
@@ -3800,6 +3852,7 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
                 onEntryDelete={onPartLocationDelete}
               />
             )}
+            {activeTab === 'users' && <AdminUsersTab />}
           </div>
         </div>
       );
@@ -4923,6 +4976,77 @@ ${kbRef ? `\nKNOWLEDGE BASE REFERENCE:\n${kbRef}` : ''}`;
               </button>
             </div>
           </div>
+        </div>
+      );
+    }
+
+    // ============================================================
+    // ADMIN TAB: USERS
+    // ============================================================
+
+    function AdminUsersTab() {
+      const [users, setUsers] = useState([]);
+      const [isLoading, setIsLoading] = useState(true);
+
+      useEffect(() => {
+        FirestoreService.getUsers()
+          .then(setUsers)
+          .catch(e => console.error('Failed to load users:', e))
+          .finally(() => setIsLoading(false));
+      }, []);
+
+      const formatDate = (iso) => {
+        if (!iso) return '—';
+        try {
+          return new Date(iso).toLocaleDateString('en-GB', { day: '2-digit', month: 'short', year: 'numeric', hour: '2-digit', minute: '2-digit' });
+        } catch { return '—'; }
+      };
+
+      if (isLoading) {
+        return <div className="flex items-center justify-center py-16 text-gray-400 text-sm">Loading users…</div>;
+      }
+
+      return (
+        <div>
+          <div className="flex items-center justify-between mb-4">
+            <p className="text-sm text-gray-500">{users.length} registered user{users.length !== 1 ? 's' : ''} — accounts are managed in Firebase Console</p>
+          </div>
+          {users.length === 0 ? (
+            <div className="bg-white rounded-xl border border-gray-200 px-8 py-16 text-center">
+              <p className="text-gray-400 text-sm">No users have logged in yet.</p>
+            </div>
+          ) : (
+            <div className="bg-white rounded-xl border border-gray-200 overflow-hidden">
+              <table className="w-full">
+                <thead>
+                  <tr className="bg-gray-50 border-b border-gray-200">
+                    <th className="text-left text-xs font-semibold text-gray-500 uppercase tracking-wider px-6 py-3">Email</th>
+                    <th className="text-left text-xs font-semibold text-gray-500 uppercase tracking-wider px-6 py-3">Role</th>
+                    <th className="text-left text-xs font-semibold text-gray-500 uppercase tracking-wider px-6 py-3">Last Login</th>
+                    <th className="text-left text-xs font-semibold text-gray-500 uppercase tracking-wider px-6 py-3">First Seen</th>
+                  </tr>
+                </thead>
+                <tbody className="divide-y divide-gray-100">
+                  {users.map((user) => (
+                    <tr key={user.id} className="hover:bg-gray-50 transition-colors">
+                      <td className="px-6 py-3 text-sm font-medium text-gray-800">{user.email}</td>
+                      <td className="px-6 py-3">
+                        <span className={`inline-flex px-2 py-0.5 rounded-full text-xs font-medium ${
+                          user.role === 'admin'
+                            ? 'bg-blue-100 text-blue-700'
+                            : 'bg-gray-100 text-gray-600'
+                        }`}>
+                          {user.role === 'admin' ? 'Admin' : 'User'}
+                        </span>
+                      </td>
+                      <td className="px-6 py-3 text-sm text-gray-500">{formatDate(user.lastLogin)}</td>
+                      <td className="px-6 py-3 text-sm text-gray-500">{formatDate(user.createdAt)}</td>
+                    </tr>
+                  ))}
+                </tbody>
+              </table>
+            </div>
+          )}
         </div>
       );
     }
